data/derived/sp14/progs/unify/prog0506.ml.out
Characters 149-157:
  | 0 -> buildSine(buildX)
                  ^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
